# telegram_files_cache_server

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  pyproject.toml  requirements.txt
.github/workflows/: build_docker_image.yml  codeql-analysis.yml  rust-clippy.yml
.sqlx/: query-05a5407da8c215edb576d181e808c099685ff0a6bb10f1dfe554c7f9ecbaa557.json  query-4b5e4c89220adbe0b2eeaa63e59a9b025fd2e6eeda6b1fdcec9544e8623fb19c.json  query-515b4ef1a88274c0b51451068cba012510cb52c9549c3da8edc8c24527c1dc97.json  query-74e1e3293a2d2918ad57b04e5658db748caa62867c01375ea529a4218710eedb.json  query-f3ed08b9416d1f2285917eaeaddcd188b6d60e33edf02bd4ae4f4f3806bf7879.json  query-fdf0b4d6304e2bead0c9c3707edbfe6d78fede31b1b5892e68138aa5a2271101.json
docker/: production.dockerfile
migrations/: 20260116094605_create_cached_files_table.sql
prisma/: schema.prisma
scripts/: env.sh  healthcheck.py  start.sh  start_production.sh
src/: config.rs  db.rs  main.py  main.rs  prisma.rs  repository.rs  serializers.rs  views.rs
src/app/: depends.py  models.py  serializers.py  utils.py  views.py
src/app/alembic/: env.py
src/app/alembic/versions/: 62d57916ec53_.py  9b7cfb422191_.py  f77b0b14f9eb_.py
src/app/services/: cache_updater.py  caption_getter.py  downloader.py  files_client.py  files_uploader.py  library_client.py
src/core/: app.py  arq_pool.py  config.py  db.py  redis_client.py  sentry.py  setup_arq.py  taskiq_middlewares.py  taskiq_worker.py
src/services/: bots.rs  download_utils.rs  minio.rs  mod.rs
src/services/book_library/: mod.rs  types.rs
src/services/downloader/: mod.rs
src/services/telegram_files/: mod.rs
