[package]
name = "telegram_files_cache_server"
version = "0.1.0"
edition = "2021"


[workspace]
members = [
    "prisma-cli"
]


[dependencies]
once_cell = "1.20.1"

dotenv = "0.15.0"

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", default-features = false, features = ["postgresql"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.8", features = ["json", "stream", "multipart"] }

tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
axum = { version = "0.7.7", features = ["json"] }
axum-prometheus = "0.7.0"
chrono = "0.4.38"
sentry = { version = "0.34.0", features = ["debug-images"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
sentry-tracing = "0.34.0"
tower-http = { version = "0.6.1", features = ["trace"] }

base64 = "0.22.1"

futures = "0.3.30"
futures-core = "0.3.30"
async-stream = "0.3.6"

tempfile = "3.13.0"
bytes = "1.7.2"

teloxide = { version = "0.13.0", features = ["macros", "webhooks-axum", "cache-me", "throttle"] }

moka = { version = "0.12.8", features = ["future"] }
