[package]
name = "telegram_files_cache_server"
version = "0.1.0"
edition = "2021"


[dependencies]
once_cell = "1.20.2"

dotenvy = "0.15.0"

tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }

axum = { version = "0.7.9", features = ["json"] }
axum-prometheus = "0.7.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
sentry-tracing = "0.35.0"
tower-http = { version = "0.6.2", features = ["trace"] }

reqwest = { version = "0.12.9", features = ["json", "stream", "multipart"] }

chrono = "0.4.39"
sentry = { version = "0.35.0", features = ["debug-images"] }

base64 = "0.22.1"

futures = "0.3.31"
futures-core = "0.3.31"
async-stream = "0.3.6"

tempfile = "3.14.0"
bytes = "1.9.0"

teloxide = { version = "0.13.0", features = ["macros", "webhooks-axum", "cache-me", "throttle"] }

moka = { version = "0.12.8", features = ["future"] }

sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros"] }
