[package]
name = "telegram_files_cache_server"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = 'abort'

[profile.profiling]
inherits = "release"
debug = true
strip = false


[dependencies]
once_cell = "1.21.1"

dotenvy = "0.15.0"

tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["compat"] }

axum = { version = "0.8.1", features = ["json"] }
axum-prometheus = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
sentry-tracing = "0.41.0"
tower-http = { version = "0.6.2", features = ["trace"] }

reqwest = { version = "0.12.15", features = ["json", "stream", "multipart"] }

chrono = "0.4.40"
sentry = { version = "0.41.0", features = ["debug-images"] }

base64 = "0.22.1"

futures = "0.3.31"
futures-core = "0.3.31"
async-stream = "0.3.6"

tempfile = "3.19.1"
bytes = "1.10.1"

teloxide = { version = "0.16.0", features = ["macros", "webhooks-axum", "cache-me", "throttle"] }

moka = { version = "0.12.10", features = ["future"] }

sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "macros"] }
